# Vladsomware

./: .gitignore  Cargo.toml  README.md  build.rs
src/: collect_vec_sink.rs  directory_enumerator.rs  encryptor.rs  main.rs  progress.rs
