[package]
name = "Vladsomware2"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.32.1"
egui = "0.32.1"
image = "0.25.6"
rfd = "0.15.4"
windows = {version = "0.62.0", features = ["Foundation_Collections", "Win32_Security_Cryptography", "Win32_Storage", "Win32_Storage_FileSystem"] }


[build-dependencies]
winres = "0.1.12"
ico = "0.4.0"
dunce = "1.0.5"